--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-DB_NAME=todolist
-DB_USER=postgres
-DB_PASSWORD=root
-DB_HOST=localhost
-DB_PORT=5432
+DATABASE_URL=postgresql://neondb_owner:npg_XrbZBWi2S6FY@ep-rapid-night-abl9dhzk-pooler.eu-west-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+SECRET_KEY=32ee69da4c34d6d4a3cd64ef30822294
