--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ Werkzeug==3.0.1
 psycopg2-binary==2.9.9
 Flask==2.3.3
 Werkzeug==2.3.7
-psycopg2-binary==2.9.7
+SQLAlchemy==2.0.21
+asyncpg==0.28.0
 python-dotenv==1.0.0
 gunicorn==21.2.0
+Flask-SQLAlchemy==3.1.1
