--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.3.3
 Werkzeug==2.3.7
 SQLAlchemy==2.0.21
-asyncpg==0.28.0
+psycopg[binary]==3.1.12
 python-dotenv==1.0.0
 gunicorn==21.2.0
 Flask-SQLAlchemy==3.1.1
