--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-Flask==2.3.3
-Werkzeug==2.3.7
-SQLAlchemy==2.0.21
-psycopg==3.1.12
-psycopg-binary==3.2.9
+Flask==2.2.5
+Werkzeug==2.2.3
+SQLAlchemy==1.4.41
+psycopg2-binary==2.9.6
 python-dotenv==1.0.0
 gunicorn==21.2.0
-Flask-SQLAlchemy==3.1.1
+Flask-SQLAlchemy==3.0.2
